<resources>
    <string-array name="medications_options">
        <item>None</item>
        <item>Corticosteroids</item>
    </string-array>
    <string-array name="hormonal_changes_options">
        <item>Normal</item>
        <item>Postmenopausal</item>
    </string-array>
    <string-array name="family_history_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="body_weight_options">
        <item>Underweight</item>
        <item>Normal</item>
    </string-array>
    <string-array name="calcium_intake_options">
        <item>Low</item>
        <item>Adequate</item>
    </string-array>
    <string-array name="vitamin_d_intake_options">
        <item>Sufficient</item>
        <item>Insufficient</item>
    </string-array>
    <string-array name="physical_activity_options">
        <item>Active</item>
        <item>Sedentary</item>
    </string-array>
    <string-array name="smoking_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="alcohol_consumption_options">
        <item>Moderate</item>
        <item>None</item>
    </string-array>
    <string-array name="medical_conditions_options">
        <item>Rheumatoid Arthritis</item>
        <item>None</item>
        <item>Hyperthyroidism</item>
    </string-array>
    <string-array name="prior_fractures_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="insight_to_osteo_vision">Insight to Osteo Vision</string>
    <string name="skip">Skip</string>
    <string name="start_diagnosis">Start Diagnosis</string>
    <string name="simplified_process_exact_outcomes_empower_your_life">Simplified process, exact outcomes, empower your life.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="beyond_conventional_care">BEYOND CONVENTIONAL CARE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="password_cannot_be_empty">Password Can\'t Be Empty</string>
    <string name="invalid_email_or_password">Invalid Email or Password</string>
    <string name="login_successful">Login Successful</string>
    <string name="registration_starting">Registration</string>
    <string name="prediction_starting">Prediction</string>
    <string name="visualization_starting">Dashboard</string>
    <string name="doctors_profile_starting">Doctor\'s Profile</string>
    <string name="home_starting">Home</string>
    <string name="settings_starting">Settings</string>
    <string name="about_starting">About</string>
    <string name="logout">Logout</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_device">About Device</string>
    <string name="android_version">Android Version - 1.0</string>
    <string name="setting_description">Academic Project - Masters of Applied Computing</string>
    <string name="subject">Subject</string>
    <string name="setting_subject_desc">Android Application Programming</string>
    <string name="institution">Institution</string>
    <string name="wilfrid_laurier_university">Wilfrid Laurier University\n</string>
    <string name="about_dropdown_1">Contribution - Our Team</string>
    <string name="about_dropdown_2">Frequently Asked Questions</string>
    <string name="about_desc">Get to know the App..</string>
    <string name="team">Our Team</string>
    <string name="excellence_in_osteoporosis">AI Excellence in Osteoporosis Care</string>
    <string name="version">Version: 1.0</string>
    <string name="about_full_description">Dedicated to improving bone health, we leverage cutting-edge AI to offer precise and reliable osteoporosis diagnosis, helping you stay strong and healthy.</string>
    <string name="faq_q1">What is osteoporosis?</string>
    <string name="faq_a1">Osteoporosis is a severe disease which can weaken the bones significantly.</string>
    <string name="faq_q2">How is osteoporosis diagnosed?</string>
    <string name="faq_a2">Osteoporosis is diagnosed through bone density tests.</string>
    <string name="faq_q3">What are the risk factors?</string>
    <string name="faq_a3">Risk factors include age, gender, and lifestyle choices.</string>
    <string name="faq_q4">How can osteoporosis be prevented?</string>
    <string name="faq_a4">Prevention includes a healthy diet and regular exercise.</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="search_patients">Search patients</string>
    <string name="error_opening_patient_details">Error Opening Patient Details: </string>
    <string name="error_loading_patient_data">Error Loading Patient Data: </string>
    <string name="no_patients_found">No Patients Found!</string>
    <string name="missing_columns">One or more required columns are missing from the cursor.</string>
    <string name="change_profile_picture">Change Picture</string>
    <string name="remove_profile_picture">Remove Picture</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_password">Update Password</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="patient_information">Patient Information</string>
    <string name="age">Age</string>
    <string name="enter_patient_s_name">Enter Patient\'s Name</string>
    <string name="enter_patient_s_email">Enter Patient\'s Email</string>
    <string name="enter_patient_s_age">Enter Patient\'s Age</string>
    <string name="medications">Medications</string>
    <string name="hormonal_changes">Hormonal Changes</string>
    <string name="family_history">Family History</string>
    <string name="body_weight">Body Weight</string>
    <string name="calcium_intake">Calcium Intake</string>
    <string name="vitamin_d_intake">Vitamin-D Intake</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="smoking">Smoking</string>
    <string name="alcohol_consumption">Alcohol Consumption</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="prior_fractures">Prior Fractures</string>
    <string name="select_x_ray_image">Select X-ray Image</string>
    <string name="prognosticate">Prognosticate</string>
    <string name="save">Save</string>
    <string name="prediction_results">Prediction Results</string>
    <string name="prediction_desc">The anticipated rate of osteoporosis occurrence is currently:</string>
    <string name="prediction_of_image_data">Prediction of Image Data:</string>
    <string name="prediction_of_tabular_data">Prediction of Tabular Data:</string>
    <string name="error_models_not_loaded">Error: Models not loaded!</string>
    <string name="please_enter_age">Please Enter Age!</string>
    <string name="no_image_selected">No Image Selected!</string>
    <string name="please_select_an_image">Please Select An Image!</string>
    <string name="error_in_prediction">Error in Prediction!</string>
    <string name="please_fill_in_all_fields">Please Fill In All Fields!</string>
    <string name="data_saved_successfully">Data Saved Successfully!</string>
    <string name="display_and_theme">Display and Theme</string>
    <string name="prediction">Prediction</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="visualisation">Visualisation</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="error_no_email_provided">Error: No email provided</string>
    <string name="error_user_not_found">Error: User not Found!</string>
    <string name="profile_image_updated">Profile Image Updated</string>
    <string name="password_updated">Password Updated</string>
    <string name="osteo_vision">OSTEO VISION</string>
    <string name="patients">Patients</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="x_ray_image">X-Ray Image</string>
    <string name="make_prediction">Make Prediction</string>
    <string name="no_prediction_desc">No prediction has been made yet!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_patient_not_found">Error: Patient not found!</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="update_prediction">Update Prediction</string>
    <string name="patient_data_updated_successfully">Patient Data Updated Successfully!</string>
    <string name="failed_to_update_patient_data">Failed to Update Patient Data!</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="delete_confirmation">Are you sure you want to delete this patient? This action cannot be undone.</string>
    <string name="patient_deleted_successfully">Patient Deleted Successfully!</string>
    <string name="failed_to_delete_patient">Failed to Delete Patient!</string>
    <string name="patient_visualisation">Patient Visualisation</string>
    <string name="error_visualisation_message">An error occurred while initializing the visualization.</string>
    <string name="total_patients">Total Patients: </string>
    <string name="failed_to_display_total_patients">Failed to display total patients.</string>
    <string name="age_groups">Age Groups</string>
    <string name="age_group_distribution">Age Group Distribution</string>
    <string name="failed_to_display_age_group_distribution">Failed to display age group distribution.</string>
    <string name="no_data_available_for_osteoporosis_distribution">No data available for osteoporosis distribution.</string>
    <string name="without_osteoporosis">Normal</string>
    <string name="with_osteoporosis">Osteoporosis</string>
    <string name="osteoporosis_distribution">Osteoporosis Distribution</string>
    <string name="osteoporosis_distribution_space">Osteoporosis\nDistribution</string>
    <string name="failed_to_display_osteoporosis_distribution">Failed to display osteoporosis distribution.</string>
    <string name="login_and_authentication">Login and Authentication</string>
    <string name="add_patients">Add Patients</string>
    <string name="patient_details">Patient Details</string>
    <string name="prediction_and_results">Visual Analysis</string>
    <string name="visualization_and_profile">Doctor Profile</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="visual_analysis">Visual Analysis</string>
    <string name="dashboard">Dashboard</string>
    <string name="patient_list">Patient List</string>
    <string name="edit_patient_information">Edit Patient Information</string>
    <string name="save_changes">Save Changes</string>
    <string name="login_authentication_instructions">1. Enter your provided credentials to access the app.\n2. Use your unique username and password.\n3. Contact support if you encounter login issues.</string>
</resources>