<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home_starting" />
    <item
        android:id="@+id/navigation_registration"
        android:icon="@drawable/add"
        android:title="@string/registration" />
    <item
        android:id="@+id/navigation_prediction"
        android:icon="@drawable/prediction"
        android:title="@string/prediction" />
    <item
        android:id="@+id/navigation_visualization"
        android:icon="@drawable/visualisation"
        android:title="@string/visualisation" />
    <item
        android:id="@+id/navigation_doctors_profile"
        android:icon="@drawable/profile"
        android:title="@string/doctors_profile_starting" />
</menu>