<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_ray_image"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageViewXray"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:background="#EEEEEE"
            android:contentDescription="X-Ray Image"/>

        <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_x_ray_image"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medications" />

        <Spinner
            android:id="@+id/spinnerMedications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hormonal_changes" />

        <Spinner
            android:id="@+id/spinnerHormonalChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_history" />

        <Spinner
            android:id="@+id/spinnerFamilyHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_weight" />

        <Spinner
            android:id="@+id/spinnerBodyWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcium_intake" />

        <Spinner
            android:id="@+id/spinnerCalciumIntake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_d_intake" />

        <Spinner
            android:id="@+id/spinnerVitaminDIntake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physical_activity" />

        <Spinner
            android:id="@+id/spinnerPhysicalActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoking" />

        <Spinner
            android:id="@+id/spinnerSmoking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol_consumption" />

        <Spinner
            android:id="@+id/spinnerAlcoholConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_conditions" />

        <Spinner
            android:id="@+id/spinnerMedicalConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prior_fractures" />

        <Spinner
            android:id="@+id/spinnerPriorFractures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <Button
            android:id="@+id/buttonPredict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerPriorFractures"
            android:text="@string/make_prediction"/>

        <TextView
            android:id="@+id/textViewNoPrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPredict"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/no_prediction_desc"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPredict"/>


        <TextView
            android:id="@+id/textViewImagePrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewTabularPrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBarResult"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />


        <TextView
            android:id="@+id/textViewSavedImagePrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewSavedTabularPrediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="#FF0000"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</ScrollView>